--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^17.0.32",
+    "element-plus": "^2.2.0",
     "less": "^4.1.2",
     "normalize.css": "^8.0.1",
     "sass": "^1.51.0",
